[gd_scene load_steps=14 format=3 uid="uid://ca2bfbhkght7y"]

[ext_resource type="Script" path="res://Scripts/dave_legs.gd" id="1_0ytrs"]
[ext_resource type="Texture2D" uid="uid://y0xqnpj0rte4" path="res://assets/Davidlonglegs-Sheet.png" id="2_k4611"]
[ext_resource type="Texture2D" uid="uid://cukoc10ggfmqx" path="res://assets/davidlegwalk-Sheet.png" id="3_5k3t7"]
[ext_resource type="Script" path="res://Scripts/test.gd" id="3_7vumw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v7nug"]
atlas = ExtResource("2_k4611")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_r02e3"]
atlas = ExtResource("3_5k3t7")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttkcl"]
atlas = ExtResource("3_5k3t7")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nfeh"]
atlas = ExtResource("3_5k3t7")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbt3e"]
atlas = ExtResource("3_5k3t7")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_10lms"]
atlas = ExtResource("3_5k3t7")
region = Rect2(4000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi7yf"]
atlas = ExtResource("3_5k3t7")
region = Rect2(5000, 0, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_5i81w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7nug")
}],
"loop": true,
"name": &"Idl",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r02e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttkcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nfeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbt3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10lms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi7yf")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ps37u"]
size = Vector2(67, 20)

[node name="DaveLegs" type="Container"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_0ytrs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(20, 22)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_5i81w")
animation = &"Idl"
autoplay = "Idl"
frame_progress = 0.00733905
flip_h = true

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(60, 25)
collision_layer = 0
collision_mask = 2
script = ExtResource("3_7vumw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-25.5, -1)
shape = SubResource("RectangleShape2D_ps37u")

[node name="CoinCost" type="Area2D" parent="."]

[node name="Cost" type="Label" parent="CoinCost"]
offset_left = 6.0
offset_top = 35.0
offset_right = 46.0
offset_bottom = 58.0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_attack_area_area_exited"]
